# topic-classification

./: .gitignore  README.md  lda.py  model.py  pyproject.toml  setup.cfg  test.py
examples/: example1.py  example2.py
tests/: test.py  test2.py
text_processing/: __init__.py  _processing.py
topic_classification/: __init__.py  _clf.py  _dict.py  _lda.py  _pipe.py  _prep.py  lda.py
