[tool.poetry]
name = "topic_classification"
version = "0.1.0"
description = "Classification model based on LDA topic modeling."
authors = ["Allan Covacevice"]

[tool.poetry.dependencies]
python = "3.8"
gensim = "^4.1.2"
nlpnet = "^1.2.4"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
numpy = "^1.22.2"
nltk = "^3.7"
notebook = "^6.4.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
