[metadata]
name = topic-classification
version = file: version.txt
author = Allan Covacevice
author_email = allan.covacevice@gmail.com
summary = Library for semi-supervised text classification.
home_page = https://github.com/Acovacevice/topic-classification
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    gensim>=4.1.2
    nltk>=3.7
    nlpnet>=1.2.4
    pandas>=1.4.*
    scikit-learn>=1.0.*
    numpy>=1.22.*
    tqdm>=4.*
    text-processing @ git+ssh://git@github.com/Acovacevice/text-processing@main#egg=text-processing
include_package_data=True
python_requires = >=3.8

[options.packages.find]
include = topic_classification, topic_classification.*

[mypy]
files=topic_classification
ignore_missing_imports=true